<resources>
    <string name="app_name">GreenPic</string>
    <string name="login">로그인</string>
    <string name="register">회원가입</string>
    <string name="find_pwd">ID/비밀번호 찾기</string>
    <string name="Greening">Greening</string>
    <string name="login_id">아이디</string>
    <string name="login_pwd">비밀번호</string>
    <string name="checkbox_auto_login">CheckBox</string>
    <string name="auto_login">자동로그인</string>
    <string name="find_id_and_pw">ID/비밀번호 찾기</string>
    <string name="user_name">User_name</string>
    <string name="message">메세지를 입력하세요.</string>
    <string name="write_your_comment">Write your comment</string>
    <string name="blog">Blog</string>
    <string name="video">Video</string>
    <string name="image">Image</string>
    <string name="notification">Notification</string>
    <string name="Following" />
    <string name="MY">MY</string>
    <string name="my">MY</string>
    <string name="following">Following</string>
    <string name="community">community</string>
    <string name="hello_blank_fragment">Hello World</string>
    <string name="title_activity_market2">Market2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
