<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F6F3">


    <EditText
        android:id="@+id/id"
        android:layout_width="394dp"
        android:layout_height="55dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="304dp"
        android:autofillHints=""
        android:backgroundTint="#3FB843"
        android:ems="10"
        android:hint="@string/login_id"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/비밀번호"
        android:layout_width="396dp"
        android:layout_height="59dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="248dp"
        android:autofillHints=""
        android:backgroundTint="#3FB843"
        android:ems="10"
        android:hint="@string/login_pwd"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/auto_login"
        android:layout_width="137dp"
        android:layout_height="62dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="196dp"
        android:buttonTint="#48AC4C"
        android:fontFamily="serif"
        android:text="@string/auto_login"
        android:textColor="#67DD6C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="353dp"
        android:layout_height="67dp"
        android:layout_marginStart="28dp"
        android:backgroundTint="#BFEDC1"
        android:clickable="true"
        android:focusable="true"
        android:onClick="Login"
        android:text="@string/login"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auto_login" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="308dp"
        android:layout_height="77dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/id"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/greeninglogo"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="286dp"
        android:layout_height="216dp"
        android:layout_marginStart="60dp"
        android:tint="#26BC2C"
        app:layout_constraintBottom_toTopOf="@+id/imageView18"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/loadinglogo"
        tools:ignore="ContentDescription"  />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="204dp"
        android:layout_height="30dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="40dp"
        android:text="Don`t have account?"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="148dp"
        android:layout_height="28dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="42dp"
        android:text="Create account"
        android:textColor="#26BC2C"
        android:textColorHighlight="#26BC2C"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
