<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B8E3B9">


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout"
        android:layout_width="428dp"
        android:layout_height="268dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="420dp"
        android:background="#978F8F"
        android:clickable="true"
        android:contextClickable="true"
        android:focusable="true"
        android:scrollbarStyle="insideInset"
        android:scrollbars="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="#6E5656"
        app:tabTextAppearance="@style/TextAppearance.AppCompat.Display1"
        app:tabTextColor="#FFFFFF">


        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blog"
            android:onClick="goblog"
            android:id="@+id/goblog"/>

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/image" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video" />
    </com.google.android.material.tabs.TabLayout>

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="69dp"
        android:layout_height="69dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="300dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/blog"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="61dp"
        android:layout_height="64dp"
        android:layout_marginStart="185dp"
        android:layout_marginBottom="215dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/contents"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="96dp"
        android:layout_height="74dp"
        android:layout_marginStart="315dp"
        android:layout_marginTop="450dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/video"
        tools:ignore="ContentDescription" />

</androidx.constraintlayout.widget.ConstraintLayout>